--- a/css/style.css
+++ b/css/style.css
@@ -147,13 +147,12 @@ body {
 
 .footer {
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-around;
     font-family: "Calibri";
     font-size: 10px;
     width: 650px;  
 }
 
 .rss-logo {
-    width: 110px;
+    width: 80px;
 }
