--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,24 @@
 * {
     box-sizing: border-box;
+    transition: 0.2ms;
 }
 
+body, html { overflow-x:hidden; }
+
 body {
+    width: 90%;
     padding: 20px;
     font-family: "Montserat", "Calibri";
     font-weight: 400;
 }
 
+
 .main-wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     align-items: center;
+    max-width: 750px;
+    margin: auto;
 }
 
 .cv {
@@ -19,8 +26,9 @@ body {
     padding: 15px;
     background: linear-gradient(180deg, rgba(3, 56, 244, 0.71) 0%, rgba(224, 37, 206, 0.79) 93.75%);
     border-radius: 10px;
-    max-width: 650px;
+    max-width: 750px;
 }
+
 
 .header {
     font-family: "Montserrat";
@@ -28,12 +36,37 @@ body {
     flex-direction: row;
     justify-content: flex-start;
     padding-top: 10px;
-    width: 260px;
     height: 116.02px;
     line-height: 20px;
     color: rgb(255, 255, 255);
     background: rgba(196, 196, 196, 0.3);
     border-radius: 10px;
+}
+
+.menu {
+    display: flex;
+    justify-content: end;
+    max-width: 750px;
+}
+
+nav {
+       
+    margin-top: 5px;
+    
+
+}
+
+.topnav a {
+    text-align: center;
+    font-size: 12px;
+    padding: 5px 10px;
+    text-decoration: none;
+    
+}
+
+.topnav .icon  {
+    display: none;
+
 }
 
 .logo {
@@ -48,11 +81,16 @@ body {
     border-radius: 120px;
 }
 
+.aside {
+    display: flex;
+    flex-direction: column;
+    margin-block-start: 45px;
+}
+
 .contacts {
     justify-content: flex-start;
     font-family: "Montserrat";
     padding-left: 5px;
-    width: 260px;
     height: 133px;
     font-size: 14px;
     line-height: 1.5;
@@ -65,7 +103,6 @@ body {
     justify-content: flex-start;
     font-family: "Montserrat";
     padding-left: 2px;
-    width: 260px;
     height: 88px;
     font-size: 14px;
     color: rgb(255, 255, 255);
@@ -77,8 +114,7 @@ body {
     justify-content: flex-start;
     font-family: "Montserrat";
     padding-left: 2px;
-    width: 260px;
-    height: 133px;
+    height: 180px;
     font-size: 14px;
     line-height: 1.5;
     color: rgb(255, 255, 255);
@@ -87,10 +123,14 @@ body {
 }
 
 .info {
+    flex-direction: column;
     background-color: #fff;
     border-radius: 10px;
     padding: 10px;
     margin-left: 10px;
+    align-items: inherit;
+    display: flex;
+    margin-block-start: 45px;
 }
 
 .title {
@@ -145,14 +185,18 @@ body {
     color: #343434;
 }
 
-.footer {
+.footer  {
     display: flex;
     justify-content: space-around;
-    font-family: "Calibri";
-    font-size: 10px;
-    width: 650px;  
+    align-items: center;
+    max-width: 750px;
+    margin: auto;
 }
+
 
 .rss-logo {
     width: 80px;
 }
+
+    
+
